# logviewer

./: .gitignore  CMakeLists.txt  CSS_default.h  LogContext.cpp  LogContext.hpp  LogContext_test.cpp  LogFormatter.cpp  LogFormatter.hpp  LogFormatter_html.cpp  LogLevels.cpp  QLogViewer.cpp  QLogViewer.hpp  README.md  ReadKeyboard.cpp  ReadKeyboard.h  ReadKeyboard_test.cpp  RunInternalTests.cpp  RunInternalTests.h  TODO  TODO.md  backup.sh  backup_config.txt  backup_exclude.txt  clean.sh  entrypoint.cpp  logLevels.cpp  logLevels.h  logLevels.txt  logLevelsExample.txt  logviewer.cpp  logviewer.css  logviewer.hpp  logviewer.txt  logviewer_html.cpp  progArgs.cpp  progArgs.h  release.sh  testText_logLevels.txt  test_logsGenerator.cpp  test_osx_ramdisk_log.sh  (+1 more)
test/: logLevelsExample.txt  logLevelsExample2.txt  testText.txt  testText0.txt  testText_logLevels.txt  testText_logLevels2.txt  test_linux_ramdisk_log.sh  test_log.html
